--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_CREDENTIAL = pdfmanager:password12345678
 PORT = 5000
+DATABASE_URL = mongodb+srv://pdfmanager:password12345678@cluster0.d4gcavm.mongodb.net/?retryWrites=true&w=majority
